--- a/quiz_app.html
+++ b/quiz_app.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Quiz Game | Daling Shi</title>
+    <title>Quiz Game | Eileen</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
