check save promise not finish

--- a/quiz_app.html
+++ b/quiz_app.html
@@ -2,19 +2,20 @@
 <html lang="en">
   <head>
     <title>Quiz Game | Eileen</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
-    >
-    <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1" >
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css" >
   </head>
   <body>
     <div class="container">
       <h1>Quiz Game</h1>
       <div id="question"></div>
-      <textarea id="answer"></textarea>
+      <div class="row">
+        <textarea id="answer"></textarea>
+        <div class="check"></div>
+        <div style="display: inline-block;">456</div>
+      </div>
 
       <div class="row">
         <button id="next_btn" class="btn btn-primary">Next</button>
@@ -22,8 +23,14 @@
         <button id="restart_btn" class="btn btn-danger">Restart Quiz</button>
       </div>
 
-      <ul id="resList" class="invisible">Answer List:</ul>
+      <ul id="resList" class="invisible">
+        Answer List:
+      </ul>
       <div id="totalScore" class="invisible"></div>
+    </div>
+
+    <div id="error_alert" class="alert alert-danger" role="alert" style="display: none">
+      Error loading quiz data. Please try again later.
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
@@ -31,3 +38,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
+<!-- <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">  -->
