--- a/quiz_app.html
+++ b/quiz_app.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css" >
+    <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon"> 
   </head>
   <body>
     <div class="container">
@@ -13,8 +14,8 @@
       <div id="question"></div>
       <div class="row">
         <textarea id="answer"></textarea>
-        <div class="check"></div>
-        <div style="display: inline-block;">456</div>
+        <div id="check" class="invisible"></div>
+        <div style="display: inline-block;">saved</div>
       </div>
 
       <div class="row">
@@ -39,4 +40,3 @@
   </body>
 </html>
 
-<!-- <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">  -->
