--- a/quiz_app.html
+++ b/quiz_app.html
@@ -9,37 +9,33 @@
     <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon"> 
   </head>
   <body>
-    <div class="container">
-      <h1>Quiz Game</h1>
-      <div id="question"></div>
+    <div class="container" style="text-align: center;">
+      <h1 style="font-family: fantasy;">Quiz Game</h1>
+      <h4 id="question"></h4>
       <div class="row">
         <textarea id="answer"></textarea>
         <div id="success" class="invisible" style="display: inline-block;">
           <div id="tick"></div>
-          <div class="text">saved</div>
+          <div class="text1">saved</div>
         </div>
         <div id="fail" class="invisible" style="display: inline-block;">
           <div id="cross"></div>
-          <div class="text">not saved</div>
+          <div class="text2">not saved</div>
         </div>
       </div>
-
       <div class="row">
         <button id="next_btn" class="btn btn-primary">Next</button>
         <button id="submit_btn" class="btn btn-success">Submit</button>
         <button id="restart_btn" class="btn btn-danger">Restart Quiz</button>
       </div>
-
-      <ul id="resList" class="invisible">
-        Answer List:
-      </ul>
-      <div id="totalScore" class="invisible">2322</div>
     </div>
-
-    <div id="error_alert" class="alert alert-danger" role="alert" style="display: none">
+    <ul id="resList" class="invisible">
+      Answer List:
+    </ul>
+    <div id="totalScore" class="invisible"></div>
+    <div id="error_alert" class="alert alert-danger" role="alert" style="display: none; text-align: center;">
       Error loading quiz data. Please try again later.
     </div>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="script.js"></script>
